kubernetes-templating/frontend/templates/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: frontend
  annotations:
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: "true"
    certmanager.k8s.io/cluster-issuer: "letsencrypt-production"
    certmanager.k8s.io/acme-challenge-type: http01
spec:
  tls:
  - hosts:
    - frontend-34-89-199-143.sslip.io
    secretName: frontend-34-89-199-143.sslip.io
  rules:
  - host: frontend-34-89-199-143.sslip.io
    http:
      paths:
      - path: /
        backend:
          serviceName: frontend
          servicePort: 80
